cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 20)
project(xparser)
set(SOURCE src/)
set(BUILD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BUILD_DIR})
set(EXECUTABLE_OUTPUT_PATH ${BUILD_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${BUILD_DIR}/lib)
set(CMAKE_BUILD_FILES_DIRECTORY ${BUILD_DIR})
set(CMAKE_BUILD_DIRECTORY ${BUILD_DIR})
set(CMAKE_BINARY_DIR ${BUILD_DIR}/bin)
include_directories(include/)
option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
add_executable(xparser ${TEST}/test.cc ${SOURCE}/xparser.cc ${SOURCE}/jpp.cc)