cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 20)
project(xparser_test)
set(SOURCE src)
set(TEST test)
include_directories(include/)
option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
file(COPY ${TEST}/json/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/json)
add_executable(xparser_test ${TEST}/test.cc ${SOURCE}/xparser.cc ${SOURCE}/jpp.cc ${SOURCE}/ast.cc ${SOURCE}/rel.cc ${SOURCE}/ptools.cc)